Fix spacing in edraak promo titles

--- a/static/sass/_base.scss
+++ b/static/sass/_base.scss
@@ -2,6 +2,10 @@ body {
   .container {
     max-width: 960px;
   }
+
+  h1, h2 {
+    letter-spacing: 0px;
+  }
 }
 
 #remember-yes {
